lab1(task3 with 1 list)

--- a/docs/p0.md
+++ b/docs/p0.md
@@ -4,21 +4,21 @@
 
 >Fill in your name and email address.
 
-FirstName LastName <email@domain.example>
+Qizhi Chen 2100012959@stu.pku.edu.cn
 
 >If you have any preliminary comments on your submission, notes for the TAs, please give them here.
 
-
-
 >Please cite any offline or online sources you consulted while preparing your submission, other than the Pintos documentation, course text, lecture notes, and course staff.
 
+I asked chatgpt for some x86 asm code.
 
+I asked chatgpt to figure out some source codes.
 
 ## Booting Pintos
 
 >A1: Put the screenshot of Pintos running example here.
 
-
+![img](file:///C:\Users\emoairx\AppData\Local\Temp\ksohtml22300\wps1.jpg)
 
 ## Debugging
 
@@ -26,9 +26,11 @@ FirstName LastName <email@domain.example>
 
 >B1: What is the first instruction that gets executed?
 
-
+The first instruction is [ljmp  \$0x3630,\$0xf000e05b]，PC jump to one position
 
 >B2: At which physical address is this instruction located?
+
+physical address is 0xffff0。
 
 
 
@@ -37,17 +39,57 @@ FirstName LastName <email@domain.example>
 
 >B3: How does the bootloader read disk sectors? In particular, what BIOS interrupt is used?
 
-
+The interrupt of 0x13 is used, where AH=0x42, the disk read sector extension function of BIOS is called and read into the buffer
 
 >B4: How does the bootloader decides whether it successfully finds the Pintos kernel?
+
+First set the disk number and head number to zero, and then call read_ This function reads disk information into 0x2000 memory
+
+The bootloader will check whether the boot flag 0xaa55 exists in the MBR. If it exists, it means that the hard disk is in the partition format and can read the partition table information.
+
+Then it will traverse each partition in the partition table, find the partition of type 0x20 (Pintos kernel partition), and jump to load when it finds it_ The kernel part.
 
 
 
 >B5: What happens when the bootloader could not find the Pintos kernel?
 
+If no suitable kernel partition is found for all hard disks and partitions, "Not found" will be printed and call 18 to interrupt Notify BIOS that boot failed.
+
+
+
 
 
 >B6: At what point and how exactly does the bootloader transfer control to the Pintos kernel?
+
+Read from the first sector (EBX storage sector) one by one, and load the contents of the disk into the memory space starting from 0x2000.
+
+After loading, read the location of the kernel start address from the ELF header according to the offset, and then add the location of the identification segment 0x2000. Store the first two bytes and the last two bytes of the start segment in the segment and offset respectively (the location of the start code segment is used as the data segment), and then use the ljmp instruction to jump to the START section
+
+Initialize register, get memory size, and enable A20 address addressing through interrupt.
+
+Create a temporary page directory table and page table at startup, and map the first 64MB of physical memory (or the size of physical memory if the physical memory is less than 64MB) to the first 64MB of linear address space.
+
+The page table is created by:
+
+1. Create an empty page directory table in 0xf000
+
+2. At the same time, it is marked that this is a 4KB page table read and written by the kernel. Then create 1024 page table entries and build the mapping with physical address.
+
+3. Setting these page table entries is also read-write in kernel mode.
+
+4. The page table directory address is transferred to the cr3 register.
+
+Then convert the system to protection mode, specifically:
+
+1. Prohibit interruption
+
+2. Set the base address and length limit of the global descriptor table
+
+3. Set CR0 register to enable protection mode and paging mechanism.
+
+4. Become a 32-bit code segment and load some data.
+
+Call Pintos_ init。
 
 
 
@@ -55,37 +97,87 @@ FirstName LastName <email@domain.example>
 
 >B7: At the entry of pintos_init(), what is the value of expression `init_page_dir[pd_no(ptov(0))]` in hexadecimal format?
 
+use `print`
 
+`The result of ptov (0) 'is' 0xc0000000'.
+
+`pd_ The result of no (ptov (0)) 'is' 768', indicating that the index of the page directory entry corresponding to the virtual address' 0xc0000000 'is' 768'.
+
+`init_ page_ Dir ` is an array. The index is the index of the page directory entry, and the value is the physical address of the page table corresponding to the index.
+
+`init_ page_ The result of dir [pd_no (ptov (0))] ` is' 0 ', which means that the page directory entry corresponding to the virtual address' 0xc0000000' is not mapped to the physical address.
 
 >B8: When `palloc_get_page()` is called for the first time,
 
 >> B8.1 what does the call stack look like?
->>
->> 
+>
+>- > `backtrace`
+>  >
+>  > ```
+>  > (gdb) backtrace
+>  > #0  palloc_get_page (flags=(PAL_ASSERT | PAL_ZERO)) at ../../threads/palloc.c:113
+>  > #1  0xc00203aa in paging_init () at ../../threads/init.c:168
+>  > #2  0xc002031b in pintos_init () at ../../threads/init.c:100
+>  > #3  0xc002013d in start () at ../../threads/start.S:180
+>  > ```
+>
+>- 
 
 >> B8.2 what is the return value in hexadecimal format?
->>
->> 
+>
+> > ```
+> > (gdb) print /x palloc_get_multiple (flags, 1)
+> > => 0xc000ef7f:  int3
+>  > $5 = 0xc0101000
+>  > ```
 
+>so it is 0xc0101000
+>
+>
+>
 >> B8.3 what is the value of expression `init_page_dir[pd_no(ptov(0))]` in hexadecimal format?
->>
->> 
+>
+> > ```
+> > (gdb) print /x init_page_dir[pd_no(ptov(0))]
+> > => 0xc000ef7f:  int3
+> > => 0xc000ef7f:  int3
+> > $6 = 0x0
+> > ```
+> >
+> > 0
 
 
 
 >B9: When palloc_get_page() is called for the third time,
 
 >> B9.1 what does the call stack look like?
->>
->> 
+>
+> >```
+> >(gdb) backtrace
+> >#0  palloc_get_page (flags=PAL_ZERO) at ../../threads/palloc.c:112
+> >#1  0xc0020a81 in thread_create (name=0xc002e895 "idle", priority=0, function=0xc0020eb0 <idle>, aux=0xc000efbc) at ../../threads/thread.c:178
+> >#2  0xc0020976 in thread_start () at ../../threads/thread.c:111
+> >#3  0xc0020334 in pintos_init () at ../../threads/init.c:119
+> >#4  0xc002013d in start () at ../../threads/start.S:180
+> >```
+> >
+> >
 
 >> B9.2 what is the return value in hexadecimal format?
->>
->> 
+>
+> >```
+> >(gdb) print /x palloc_get_multiple (flags, 1)
+> >=> 0xc000ef4f:  int3
+>  >$1 = 0xc0103000
 
 >> B9.3 what is the value of expression `init_page_dir[pd_no(ptov(0))]` in hexadecimal format?
->>
->> 
+>
+> > ```
+> > (gdb) print /x init_page_dir[pd_no(ptov(0))]
+> > => 0xc000ef4f:  int3
+> > => 0xc000ef4f:  int3
+> > $2 = 0x102027
+> > ```
 
 
 
@@ -93,6 +185,130 @@ FirstName LastName <email@domain.example>
 
 >C1: Put the screenshot of your kernel monitor running example here. (It should show how your kernel shell respond to `whoami`, `exit`, and `other input`.)
 
+![image-20230305211921787](C:\Users\emoairx\AppData\Roaming\Typora\typora-user-images\image-20230305211921787.png)
+
 #### 
 
 >C2: Explain how you read and write to the console for the kernel monitor.
+
+
+
+**about read from the console**
+
+i uses the function `input_getc` defined in `input.h`
+
+```C++
+/** Retrieves a key from the input buffer.
+   If the buffer is empty, waits for a key to be pressed. */
+uint8_t
+input_getc (void) 
+{
+  enum intr_level old_level;
+  uint8_t key;
+
+  old_level = intr_disable ();
+  key = intq_getc (&buffer);
+  serial_notify ();
+  intr_set_level (old_level);
+  
+  return key;
+}
+```
+
+1. The `intr_disable()` function disables interrupts and returns the current interrupt level, which is saved in the `old_level` variable.
+2. The `intq_getc()` function reads a character from a character buffer `buffer` and saves it in the `key` variable.
+3. The `serial_notify()` function notifies the serial port that a character has been read.
+4. The `intr_set_level()` function restores the previous interrupt level.
+5. The character stored in the `key` variable is returned.
+
+the `intq_getc` function just runs as 
+
+> Removes a byte from Q and returns it.  If Q is empty, sleeps until a byte is added.  When called from an interrupt handler, Q must not be empty.
+
+The `keyboard_interrupt` function in `/devices/kbd.c` implements interrupt-driven keyboard input by calling the `input_putc` function to add the received characters to a buffer or queue. This buffer can then be used by other functions, such as `input_getc`, to read the keyboard input.
+
+---
+
+**about write to the console**
+
+I uses `printf` `putchar` `puts`.  they are defined in `stdio.h` and `console.h`.
+
+"printf" function prints output to the standard output stream.
+
+they depends on the function `putchar_have_lock` . By using locking mechanisms, it is possible to prevent write conflicts and safely pass data to both VGA and serial ports.
+
+
+
+**over design**
+
+.... I create simple_shell.c,simple_shell.h and add them into Makefile
+
+there is a main loop running, using a array of 128 chars to restore the command.
+
+it first output `PKUOS>` and wait for user input until a commandline is over.
+
+if the input is `\r` or `\n` , that means the command is over,I should parse something.
+
+if the input is `\b` that means I should delete the last char.
+
+otherwise, if the input is some `visable character`, just put them into command char array and using `putchar` function to do something.
+
+
+
+```c++
+#include "devices/input.h"
+#include "lib/kernel/console.h"
+#include "lib/stdio.h"
+#include "lib/string.h"
+#include "threads/simple_shell.h"
+// A simple shell that reads a command line and executes it.
+static bool visable_char(char c){
+  if(c >= ' ' && c <= '~') return true;
+  return false;
+}
+void simple_shell(void){
+    while (1) {
+      printf("PKUOS>");
+      char command_line[128];
+      int len = 0;
+      command_line[0] = '\0';
+      for(;;){
+        char c = input_getc();
+        if(c == 127){//\b
+          if(len > 0){
+            len--;
+            command_line[len] = '\0'; 
+            putchar('\b');
+            putchar(' ');
+            putchar('\b');
+          }
+          continue;
+        }
+
+        if(c == '\r' || c=='\n'){
+          putchar('\n');
+          break;
+        }
+
+        if(visable_char(c) == false) continue;
+        command_line[len++] = c;
+        command_line[len] = '\0';
+        putchar(c);
+      }
+      if (strcmp(command_line, "whoami") == 0){
+        printf("2100012959\n");
+        continue;
+      }
+      if (strcmp(command_line, "exit") == 0) {
+        printf("GOODBYE~");
+        puts("");
+        puts("");
+        break; // Exit the loop
+      }
+      printf("Command not recognized: %s\n", command_line);
+    }
+}
+```
+
+
+
